Mirroring from Micro.blog.

--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ gravatar_hash: "ea61fa28a4a8b50be3825a264f1f8b21"
 avatar: "https://www.gravatar.com/avatar/ea61fa28a4a8b50be3825a264f1f8b21?s=160"
 full_name: "Jackson Wyndow"
 bio: ""
-twitter_username: ""
+twitter_username: "JacksonOfTrades"
 github_username: ""
-instagram_username: ""
+instagram_username: "jwyndow"
 paginate: 20
 paginate_path: "/page/:num/"
 timezone: "Pacific/Tongatapu"
